# pywinrt

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_pywinrt_nuget.cmd  requirements-bdist.txt  requirements-sdist.txt  wheels-requirements.txt
projection/: .gitignore  CMakeLists.txt  build.ps1  generate.ps1  readme.md  setup.py
projection/interop/: README.md
projection/winrt-Microsoft.Graphics.DirectX/: README.md  py.Microsoft.Graphics.DirectX.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.Graphics.Display/: README.md  all-requirements.txt  py.Microsoft.Graphics.Display.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition.Core/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.Core.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition.Diagnostics/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.Diagnostics.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition.Effects/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.Effects.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition.Interactions/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.Interactions.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition.Scenes/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.Scenes.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Composition.SystemBackdrops/: README.md  all-requirements.txt  py.Microsoft.UI.Composition.SystemBackdrops.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Content/: README.md  all-requirements.txt  py.Microsoft.UI.Content.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Dispatching/: README.md  py.Microsoft.UI.Dispatching.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Input/: README.md  all-requirements.txt  py.Microsoft.UI.Input.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Input.DragDrop/: README.md  all-requirements.txt  py.Microsoft.UI.Input.DragDrop.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Input.Interop/: README.md  all-requirements.txt  py.Microsoft.UI.Input.Interop.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.System/: README.md  all-requirements.txt  py.Microsoft.UI.System.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Text/: README.md  all-requirements.txt  py.Microsoft.UI.Text.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Windowing/: README.md  all-requirements.txt  py.Microsoft.UI.Windowing.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Automation/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Automation.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Automation.Peers/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Automation.Peers.cpp  pyproject.toml  pywinrt-version.txt  setup.py
projection/winrt-Microsoft.UI.Xaml.Automation.Provider/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Automation.Provider.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Automation.Text/: README.md  py.Microsoft.UI.Xaml.Automation.Text.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Controls/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Controls_.cpp  py.Microsoft.UI.Xaml.Controls_2.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Controls.AnimatedVisuals/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Controls.AnimatedVisuals.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Controls.Primitives/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Controls.Primitives.cpp  py.Microsoft.UI.Xaml.Controls.Primitives_.cpp  py.Microsoft.UI.Xaml.Controls.Primitives_2.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Data/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Data.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Documents/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Documents.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Hosting/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Hosting.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Input/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Input.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Interop/: README.md  py.Microsoft.UI.Xaml.Interop.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Markup/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Markup.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Media/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Media.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Media.Animation/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Media.Animation.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Media.Imaging/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Media.Imaging.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Media.Media3D/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Media.Media3D.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Navigation/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Navigation.cpp  pyproject.toml  requirements.txt  setup.py
projection/winrt-Microsoft.UI.Xaml.Printing/: README.md  all-requirements.txt  py.Microsoft.UI.Xaml.Printing.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Resources/: README.md  py.Microsoft.UI.Xaml.Resources.cpp  pyproject.toml  setup.py
projection/winrt-Microsoft.UI.Xaml.Shapes/: README.md  all-requirements.txt  (+3 more)
src/: CMakeLists.txt  cmd_reader.h  code_writers.h  file_writers.h  helpers.h  main.cpp  readme.md  settings.h  task_group.h  text_writer.h  type_writers.h
(+9290 files in other folders)
